Fix for select2 overlapping save-button in item-form if "too many" selected items

--- a/less/controllers/item.less
+++ b/less/controllers/item.less
@@ -234,12 +234,22 @@
               .make-md-column(7);
 
               .item-fields {
+                .make-row();
+                .form-group {
+                  .make-md-column(12);
+                }
+
                 .form-control {
                   margin-bottom: 20px;
 
                   &:last-child {
                     margin-bottom: 0;
                   }
+                }
+
+                .select2,
+                .select2 .select2-container {
+                  height: auto;
                 }
               }
 
@@ -274,7 +284,9 @@
               }
 
               .item-actions {
+                .make-row();
                 .step-action-buttons {
+                  .make-md-column(12);
                   margin-top: 20px;
                   text-align: right;
                 }
